--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
+    "@types/jest": "^29.5.12",
     "babel-jest": "^29.7.0",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
